fixes bug 238847 "working path's problem of FTP connection" r=dougt sr=bryner